// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompanyOverview Snapshot > renders with a long company excerpt correctly 1`] = `
"<div>
  <div class="flex flex-col justify-between gap-6 md:flex-row md:gap-3 lg:gap-4 xl:gap-6">
    <!-- Right Column: Overview and Details -->
    <section class="w-full md:flex-1">
      <p class="text-md mb-4 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </section>
  </div>
</div>"
`;

exports[`CompanyOverview Snapshot > renders with a normal company excerpt correctly 1`] = `
"<div>
  <div class="flex flex-col justify-between gap-6 md:flex-row md:gap-3 lg:gap-4 xl:gap-6">
    <!-- Right Column: Overview and Details -->
    <section class="w-full md:flex-1">
      <p class="text-md mb-4 leading-relaxed">Leading the industry with innovative solutions.</p>
    </section>
  </div>
</div>"
`;

exports[`CompanyOverview Snapshot > renders with an empty excerpt correctly 1`] = `
"<div>
  <div class="flex flex-col justify-between gap-6 md:flex-row md:gap-3 lg:gap-4 xl:gap-6">
    <!-- Right Column: Overview and Details -->
    <section class="w-full md:flex-1">
      <p class="text-md mb-4 leading-relaxed"></p>
    </section>
  </div>
</div>"
`;
